# agent-as-a-judge

./: .env.sample  .gitignore  README.md  llm_config.yaml  pyproject.toml
.config/: pre-commit-config.yaml
.github/: .codecov.yml  dependabot.yml
agent_as_a_judge/: __init__.py  agent.py  config.py  utils.py
agent_as_a_judge/llm/: config_loader.py  cost.py  provider.py
agent_as_a_judge/module/: ask.py  code_search.py  graph.py  locate.py  memory.py  planning.py  read.py  statistics.py  text_retrieve.py
agent_as_a_judge/module/prompt/: prompt_ask.py  prompt_judge.py  prompt_locate.py  prompt_planning.py  prompt_retrieve.py  system_prompt_ask.py  system_prompt_judge.py  system_prompt_locate.py  system_prompt_planning.py  system_prompt_retrieve.py
agent_as_a_judge/utils/: __init__.py  count_lines.py  truncate.py
assets/: aaaj_sample.md  ask_sample.md
benchmark/devai/: README.md  constraints.json  trajectory-schema.json  validate_trajectory.py
benchmark/devai/instances/: 01_Image_Classification_ResNet18_Fashion_MNIST_DL.json  02_Maze_Solver_Q_Learning_Gridworld_RL.json  03_Text_Classification_NaiveBayes_20Newsgroups_ML.json  04_Text_Generation_GPT2_Prompts_DL.json  05_Game_Simulation_DQN_CartPole_v1_RL.json  06_Sentiment_Analysis_SVM_Sentiment140_ML.json  07_Image_Super_Resolution_SRCNN_Set5_DL.json  08_Robot_Control_PPO_PyBullet_RL.json  09_Recommendation_System_NCF_MovieLens_ML.json  (+46 more)
repo_docs/: sandboxai_documentation.html  sandboxai_documentation.json
scripts/: README.md  run_aaaj.py  run_ask.py  run_statistics.py  run_wiki.py
(+316 files in other folders)
